--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ button:hover {
       oninput="validateInput(this)"> <span class="answer" id="answer31"></span> <span>中華人民共和国が成立する</span> </div>
   <div class="quiz-box">
   <span class="result-icon" id="results23"></span> <input type="text" class="year-input" id="quizzes23" onkeydown="moveToNext(event, 'quizzes24')"
-      oninput="validateInput(this)"> <span class="answer" id="answer32"></span> <span>中華共和国が成立する</span> </div>
+      oninput="validateInput(this)"> <span class="answer" id="answer32"></span> <span>中華民国が成立する</span> </div>
   <div class="quiz-box">
   <span class="result-icon" id="results24"></span> <input type="text" class="year-input" id="quizzes24" onkeydown="moveToNext(event, 'quizzes25')"
       oninput="validateInput(this)"> <span class="answer" id="answer33"></span> <span>辛亥革命が起こる</span> </div>
