--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja" dir="ltr">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="MwqbMa2EIEr7I59Lej4Zy9ZHd1PN6DK9N126tWU9IHc" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
