--- a/index.html
+++ b/index.html
@@ -249,6 +249,9 @@ button:hover {
             oninput="validateInput(this)"> <span class="answer" id="answer41"></span> <span>レザノフの長崎来航</span> </div>
             <div class="quiz-box"><span class="result-icon" id="results33"></span> <input type="text" class="year-input" id="quizzes33" onkeydown="moveToNext(event, 'quizzes34')"
               oninput="validateInput(this)"> <span class="answer" id="answer42"></span> <span>ベトナム戦争(～1975)</span> </div>
+     <div class="quiz-box"><span class="result-icon" id="results34"></span> <input type="text" class="year-input" id="quizzes34" onkeydown="moveToNext(event, 'quizzes35')"
+                oninput="validateInput(this)"> <span class="answer" id="answer43"></span> <span>バテレン追放令</span> </div>
+    
     <button class="quiz-button"
     onclick="checkAnswers(event)">答えを確認する</button> <button class="show-answer-button" onclick="showAnswers()">解を表示する</button>  <button class="reset-button" onclick="resetAnswers()">リセットする</button> </div>
   <script>
